--- a/packages/application/style/images.css
+++ b/packages/application/style/images.css
@@ -4,22 +4,51 @@
 |----------------------------------------------------------------------------*/
 
 /* CSS for generic svg icons */
-.jp-icon-fill {
+.jp-icon-fill0 {
+  fill: var(--jp-ui-font-color0);
+}
+.jp-icon-fill1 {
   fill: var(--jp-ui-font-color1);
 }
+.jp-icon-fill2 {
+  fill: var(--jp-ui-font-color2);
+}
+.jp-icon-fill3 {
+  fill: var(--jp-ui-font-color3);
+}
 
-.jp-icon-stroke {
+.jp-icon-stroke0 {
+  stroke: var(--jp-ui-font-color0);
+}
+.jp-icon-stroke1 {
   stroke: var(--jp-ui-font-color1);
+}
+.jp-icon-stroke2 {
+  stroke: var(--jp-ui-font-color2);
+}
+.jp-icon-stroke3 {
+  stroke: var(--jp-ui-font-color3);
 }
 
 .jp-icon-accent0 {
   fill: var(--jp-layout-color0);
   stroke: var(--jp-layout-color0);
 }
-
 .jp-icon-accent1 {
   fill: var(--jp-layout-color1);
   stroke: var(--jp-layout-color1);
+}
+.jp-icon-accent2 {
+  fill: var(--jp-layout-color2);
+  stroke: var(--jp-layout-color2);
+}
+.jp-icon-accent3 {
+  fill: var(--jp-layout-color3);
+  stroke: var(--jp-layout-color3);
+}
+.jp-icon-accent4 {
+  fill: var(--jp-layout-color4);
+  stroke: var(--jp-layout-color4);
 }
 
 /* CSS for specific icons */
