--- a/packages/apputils-extension/style/splash.css
+++ b/packages/apputils-extension/style/splash.css
@@ -34,15 +34,18 @@
 }
 
 #main-logo {
-  background-image: url('./images/jupyter-favicon.svg');
-  background-repeat: no-repeat;
-  background-size: 100px;
-  position: absolute;
-  background-position: center;
+  align-items: center;
+  display: flex;
   width: 100%;
   height: 100%;
   z-index: 1;
   animation: 0.3s fade-in linear forwards;
+}
+
+#main-logo svg {
+  display: block;
+  margin: 0 auto;
+  width: 100px;
 }
 
 .planet {
