--- a/packages/filebrowser/style/index.css
+++ b/packages/filebrowser/style/index.css
@@ -120,7 +120,8 @@
   text-align: right;
 }
 
-.jp-DirListing-narrow .jp-id-modified, .jp-DirListing-narrow .jp-DirListing-itemModified {
+.jp-DirListing-narrow .jp-id-modified,
+.jp-DirListing-narrow .jp-DirListing-itemModified {
   display: none;
 }
 
