--- a/examples/app/templates/index.html
+++ b/examples/app/templates/index.html
@@ -11,7 +11,7 @@
   "baseUrl": "{{base_url}}",
   "wsUrl": "{{ws_url}}"
  }</script>
-  <script src="{{(base_url+page_config['publicUrl'])|replace('//', '/')}}bundle.js" main="index"></script>
+  <script src="{{page_config['frontendUrl']}}bundle.js" main="index"></script>
 
   <script type="text/javascript">
     /* Remove token from URL. */
