--- a/packages/apputils/style/dialog.css
+++ b/packages/apputils/style/dialog.css
@@ -42,6 +42,15 @@
   color: var(--jp-ui-font-color1);
 }
 
+.jp-Dialog-button {
+  overflow: visible;
+}
+
+button.jp-Dialog-button:focus {
+  outline: 1px solid var(--jp-brand-color1);
+  outline-offset: 4px;
+}
+
 .jp-Dialog-header {
   flex: 0 0 auto;
   padding-bottom: 12px;
