Consistent dialog button styles on FF/Chrome.

--- a/packages/apputils/style/dialog.css
+++ b/packages/apputils/style/dialog.css
@@ -49,6 +49,11 @@
 button.jp-Dialog-button:focus {
   outline: 1px solid var(--jp-brand-color1);
   outline-offset: 4px;
+  -moz-outline-radius: 0px;
+}
+
+button.jp-Dialog-button:focus::-moz-focus-inner {
+  border: 0;
 }
 
 .jp-Dialog-header {
