Handle small tabs overflowing and preserve the border bridging for the active tab
Fixes #6532
Reverts #6526
Reverts #6492


#3986 is now an issue again, but setting the tab min width to 0px (instead of 36px) and setting the tab overflow to hidden makes it less likely to appear in practice (i.e., the tabs need to be much denser now to overflow into the splitter). Setting the tab overflow to hidden also makes the close icon for tabs not overlap the next tab, which was very confusing.

I think this is the best compromise at this point.

I also experimented unsuccessfully with setting the z-index of the splitter handle in an attempt to get it to be on top of overflowing tabs.

--- a/packages/application/style/tabs.css
+++ b/packages/application/style/tabs.css
@@ -19,6 +19,8 @@
 |----------------------------------------------------------------------------*/
 
 .p-DockPanel-tabBar {
+  border-bottom: var(--jp-border-width) solid var(--jp-border-color1);
+  overflow: visible;
   color: var(--jp-ui-font-color1);
   font-size: var(--jp-ui-font-size1);
 }
@@ -44,7 +46,7 @@
   min-height: calc(
     var(--jp-private-horizontal-tab-height) + var(--jp-border-width)
   );
-  min-width: 36px;
+  min-width: 0px;
   margin-left: calc(-1 * var(--jp-border-width));
   line-height: var(--jp-private-horizontal-tab-height);
   padding: 0px 8px;
@@ -52,7 +54,6 @@
   border: var(--jp-border-width) solid var(--jp-border-color1);
   border-bottom: none;
   position: relative;
-  overflow: visible;
 }
 
 .p-DockPanel-tabBar .p-TabBar-tab:hover:not(.p-mod-current) {
