--- a/packages/statusbar/style/base.css
+++ b/packages/statusbar/style/base.css
@@ -30,3 +30,5 @@
 [data-jp-theme-light='false'] .jp-StatusItem-terminal {
   background-image: url('./terminal-icon-dark.svg');
 }
+
+@import './toast.css';
