Adjust settings toolbar alignment
Fixes #6622

--- a/packages/settingeditor/style/base.css
+++ b/packages/settingeditor/style/base.css
@@ -130,7 +130,8 @@
 }
 
 #setting-editor .jp-SettingsRawEditor .jp-Toolbar-item {
-  margin-top: 2px;
+  margin-top: 1px;
+  align-items: center;
 }
 
 .jp-ToolbarButtonComponent-label
