Adjust icons css classes
- New icons
- Improve names
- Remove unused icons.

--- a/packages/application/style/icons.css
+++ b/packages/application/style/icons.css
@@ -51,10 +51,6 @@
   background-image: var(--jp-icon-build);
 }
 
-.jp-ChatIcon {
-  background-image: var(--jp-icon-chat);
-}
-
 .jp-CircleIcon {
   background-image: var(--jp-icon-kernel-running);
 }
@@ -99,14 +95,6 @@
   background-image: var(--jp-icon-ellipses);
 }
 
-.jp-ExpandLessIcon {
-  background-image: var(--jp-icon-expand-less);
-}
-
-.jp-ExpandMoreIcon {
-  background-image: var(--jp-icon-expand-more);
-}
-
 .jp-ExtensionIcon {
   background-image: var(--jp-icon-extension);
 }
@@ -148,6 +136,14 @@
   padding-right: 0px;
 }
 
+.jp-KernelIcon {
+  background-image: var(--jp-icon-kernel);
+}
+
+.jp-KeyboardIcon {
+  background-image: var(--jp-icon-keyboard);
+}
+
 .jp-LauncherIcon {
   background-image: var(--jp-icon-launcher);
 }
@@ -182,11 +178,11 @@
 }
 
 .jp-NotebookIcon {
-  background-image: var(--jp-icon-book);
+  background-image: var(--jp-icon-notebook);
 }
 
-.jp-OpenFolderIcon {
-  background-image: var(--jp-icon-directory);
+.jp-FolderIcon {
+  background-image: var(--jp-icon-folder);
 }
 
 .jp-PaletteIcon {
@@ -253,14 +249,10 @@
   background-image: var(--jp-icon-file-upload);
 }
 
-.jp-YamlIcon {
+.jp-YAMLIcon {
   background-image: var(--jp-icon-yaml);
 }
 
 .jp-VegaIcon {
   background-image: var(--jp-icon-vega);
-}
-
-.jp-QuestionMarkIcon {
-  background-image: var(--jp-icon-question-mark);
 }
