--- a/packages/theme-light-extension/style/urls.css
+++ b/packages/theme-light-extension/style/urls.css
@@ -31,34 +31,31 @@
   --jp-about-header-logo: url('icons/jupyter/jupyter.svg');
   --jp-about-header-wordmark: url('images/jupyterlab-wordmark.svg');
   --jp-icon-add: url('icons/md/ic_add_24px.svg');
-  --jp-icon-book-selected: url('icons/jupyter/book_selected.svg');
-  --jp-icon-book: url('icons/jupyter/book.svg');
+  --jp-icon-notebook-selected: url('icons/jupyter/notebook_selected.svg');
+  --jp-icon-notebook: url('icons/jupyter/notebook.svg');
   --jp-icon-bug: url('icons/md/bug.svg');
   --jp-icon-build: url('icons/md/ic_build_24px.svg');
   --jp-icon-caretdown: url('icons/md/caretdown.svg');
   --jp-icon-caretleft: url('icons/md/caretleft.svg');
   --jp-icon-caretright: url('icons/md/caretright.svg');
   --jp-icon-caretup: url('icons/md/caretup.svg');
-  --jp-icon-chat: url('icons/md/chat.svg');
   --jp-icon-checkmark-disabled: url('icons/md/checkmark-disabled.svg');
   --jp-icon-checkmark: url('icons/md/checkmark.svg');
   --jp-icon-circle: url('icons/md/circle.svg');
   --jp-icon-close-circle: url('icons/md/close-circle.svg');
   --jp-icon-close: url('icons/md/close.svg');
   --jp-icon-console: url('icons/jupyter/console.svg');
+  --jp-icon-console-selected: url('icons/jupyter/console_selected.svg');
   --jp-icon-copy: url('icons/md/copy.svg');
   --jp-icon-cut: url('icons/md/cut.svg');
-  --jp-icon-directory-selected: url('icons/jupyter/directory_selected.svg');
-  --jp-icon-directory: url('icons/jupyter/directory.svg');
   --jp-icon-download: url('icons/md/download.svg');
   --jp-icon-edit: url('icons/md/edit.svg');
   --jp-icon-ellipses: url('icons/md/ellipses.svg');
-  --jp-icon-expand-less: url('icons/md/expand-less.svg');
-  --jp-icon-expand-more: url('icons/md/expand-more.svg');
   --jp-icon-extension: url('icons/md/ic_extension_24px.svg');
-  --jp-icon-file-selected: url('icons/jupyter/file_selected.svg');
   --jp-icon-file-upload: url('icons/md/ic_file_upload_24px.svg');
+  --jp-icon-file-selected: url('icons/jupyter/file_selected.svg');
   --jp-icon-file: url('icons/jupyter/file.svg');
+  --jp-icon-folder-selected: url('icons/md/ic_folder_24px_selected.svg');
   --jp-icon-folder: url('icons/md/ic_folder_24px.svg');
   --jp-icon-home: url('icons/md/ic_home_24px.svg');
   --jp-icon-image-selected: url('icons/jupyter/image_selected.svg');
@@ -71,7 +68,12 @@
   --jp-icon-json: url('icons/jupyter/json.svg');
   --jp-icon-jupyter: url('icons/jupyter/jupyter.svg');
   --jp-icon-kernel-running: url('icons/md/panorama_fish_eye.svg');
-  --jp-icon-launcher: url('icons/jupyter/launcher.svg');
+  --jp-icon-kernel-selected: url('icons/md/ic_memory_24px_selected.svg');
+  --jp-icon-kernel: url('icons/md/ic_memory_24px.svg');
+  --jp-icon-keyboard-selected: url('icons/md/ic_keyboard_24px_selected.svg');
+  --jp-icon-keyboard: url('icons/md/ic_keyboard_24px.svg');
+  --jp-icon-launcher-selected: url('icons/md/ic_launch_24px_selected.svg');
+  --jp-icon-launcher: url('icons/md/ic_launch_24px.svg');
   --jp-icon-link: url('icons/md/link.svg');
   --jp-icon-markdown-selected: url('icons/jupyter/markdown_selected.svg');
   --jp-icon-markdown: url('icons/jupyter/markdown.svg');
@@ -81,7 +83,6 @@
   --jp-icon-paste: url('icons/md/paste.svg');
   --jp-icon-python-selected: url('icons/jupyter/python_selected.svg');
   --jp-icon-python: url('icons/jupyter/python.svg');
-  --jp-icon-question-mark: url('icons/jupyter/questionmark.svg');
   --jp-icon-r-selected: url('icons/jupyter/r_selected.svg');
   --jp-icon-r: url('icons/jupyter/r.svg');
   --jp-icon-refresh: url('icons/md/ic_refresh_18px.svg');
@@ -93,7 +94,8 @@
   --jp-icon-search-arrow-down: url('icons/jupyter/search_arrow_down.svg');
   --jp-icon-search-case-sensitive: url('icons/jupyter/search_case_sensitive.svg');
   --jp-icon-search-regex: url('icons/jupyter/search_regex.svg');
-  --jp-icon-settings: url('icons/jupyter/settings.svg');
+  --jp-icon-settings-selected: url('icons/md/ic_settings_24px_selected.svg');
+  --jp-icon-settings: url('icons/md/ic_settings_24px.svg');
   --jp-icon-spreadsheet-selected: url('icons/jupyter/csv_selected.svg');
   --jp-icon-spreadsheet: url('icons/jupyter/csv.svg');
   --jp-icon-stop: url('icons/md/stop.svg');
