Use icon styles in tab manager.

--- a/packages/tabmanager-extension/style/base.css
+++ b/packages/tabmanager-extension/style/base.css
@@ -70,10 +70,13 @@
 }
 
 #tab-manager .p-TabBar-tab .p-TabBar-tabIcon {
-  width: 14px;
   background-position: left center;
   background-repeat: no-repeat;
   margin-right: 2px;
+  min-width: 16px;
+  min-height: 16px;
+  background-size: 16px;
+  vertical-align: middle;
 }
 
 #tab-manager .p-TabBar-tab.p-mod-closable > .p-TabBar-tabCloseIcon {
@@ -116,4 +119,56 @@
   > .p-TabBar-tabCloseIcon:hover {
   background-size: 16px;
   background-image: var(--jp-icon-inverse-close-circle);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-FileIcon {
+  background-image: var(--jp-icon-file-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-TextEditorIcon {
+  background-image: var(--jp-icon-text-editor-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-NotebookIcon {
+  background-image: var(--jp-icon-notebook-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-FolderIcon {
+  background-image: var(--jp-icon-folder-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-MarkdownIcon {
+  background-image: var(--jp-icon-markdown-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-PythonIcon {
+  background-image: var(--jp-icon-python-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-JSONIcon {
+  background-image: var(--jp-icon-json-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-SpreadsheetIcon {
+  background-image: var(--jp-icon-spreadsheet-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-RKernelIcon {
+  background-image: var(--jp-icon-r-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-YAMLIcon {
+  background-image: var(--jp-icon-yaml-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-ImageIcon {
+  background-image: var(--jp-icon-image-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-CodeConsoleIcon {
+  background-image: var(--jp-icon-console-selected);
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-current .p-TabBar-tabIcon.jp-LauncherIcon {
+  background-image: var(--jp-icon-launcher-selected);
 }
