Update status bar icons.

--- a/packages/statusbar/style/base.css
+++ b/packages/statusbar/style/base.css
@@ -7,26 +7,10 @@
   background-image: url('./line-form.svg');
 }
 
-/*
- * icons for light themes
- */
-
-[data-jp-theme-light='true'] .jp-StatusItem-kernel {
-  background-image: url('./kernel-icon-light.svg');
+.jp-StatusItem-kernel {
+  background-image: var(--jp-icon-kernel);
 }
 
-[data-jp-theme-light='true'] .jp-StatusItem-terminal {
-  background-image: url('./terminal-icon-light.svg');
-}
-
-/*
- * icons for dark themes
- */
-
-[data-jp-theme-light='false'] .jp-StatusItem-kernel {
-  background-image: url('./kernel-icon-dark.svg');
-}
-
-[data-jp-theme-light='false'] .jp-StatusItem-terminal {
-  background-image: url('./terminal-icon-dark.svg');
+.jp-StatusItem-terminal {
+  background-image: var(--jp-icon-terminal);
 }
