Add filter list icon.

--- a/packages/application/style/icons.css
+++ b/packages/application/style/icons.css
@@ -107,6 +107,10 @@
   background-image: var(--jp-icon-circle);
 }
 
+.jp-FilterListIcon {
+  background-image: var(--jp-icon-filter-list);
+}
+
 .jp-FolderIcon {
   background-image: var(--jp-icon-folder);
 }
