--- a/packages/theme-light-extension/style/urls.css
+++ b/packages/theme-light-extension/style/urls.css
@@ -55,6 +55,7 @@
   --jp-icon-file-upload: url('icons/md/ic_file_upload_24px.svg');
   --jp-icon-file-selected: url('icons/jupyter/file_selected.svg');
   --jp-icon-file: url('icons/jupyter/file.svg');
+  --jp-icon-filter-list: url('icons/md/ic_filter_list_24px.svg');
   --jp-icon-folder-selected: url('icons/md/ic_folder_24px_selected.svg');
   --jp-icon-folder: url('icons/md/ic_folder_24px.svg');
   --jp-icon-home: url('icons/md/ic_home_24px.svg');
