--- a/packages/filebrowser/style/base.css
+++ b/packages/filebrowser/style/base.css
@@ -225,10 +225,7 @@
   color: limegreen;
   content: '\25CF';
   font-size: 8px;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  top: -2px;
+  position: absolute;
   left: -8px;
 }
 
